url from external endpoints may be set to application properties